Closed
Bug 420502
Opened 17 years ago
Closed 17 years ago
Using enter/return in dialogs runs the underlying command twice
Categories
(Core :: Widget: Cocoa, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta4
People
(Reporter: kengggg, Assigned: dev)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
59.01 KB,
image/png
|
Details | |
1.24 KB,
patch
|
jaas
:
review+
masayuki
:
review+
roc
:
superreview+
beltzner
:
approval1.9b4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008030111 Minefield/3.0b4pre
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008030111 Minefield/3.0b4pre
Problem:
Duplicated bookmark folder creation on Minefiled nightly build
Reproducible: Always
Steps to Reproduce:
1. Right click on Bookmark Toolbar and select "New Folder..."
2. Create new Bookmark folder by put Name: "Test" then click "Add"
3. You will see 2 bookmark folders named "test" on the Bookmark Toolbar
Actual Results:
Duplicated bookmark folder creation
Expected Results:
Bookmark folder should be created only one
Tested on Mac OS X 10.5.2 with Minefield build 2008030111
Reporter | ||
Comment 1•17 years ago
|
||
screenshot of duplicated bookmark creation
Reporter | ||
Updated•17 years ago
|
Attachment #306783 -
Attachment description: screenshot of duplicated bookmark creation → screenshot of duplicated bookmark folders creation
Comment 2•17 years ago
|
||
This is a recent regression. Probably raised by the patch on bug 358379. Haven't seen this the days before.
Assignee: nobody → joshmoz
Blocks: 358379
Severity: normal → major
Status: UNCONFIRMED → NEW
Component: Bookmarks → Widget: Cocoa
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
QA Contact: bookmarks → cocoa
Hardware: Macintosh → All
Version: unspecified → Trunk
Updated•17 years ago
|
Flags: blocking1.9?
Comment 3•17 years ago
|
||
This doesn't only happen for new folders or bookmarks. Even the creation of new profiles during start-up is affected by this regression. When using enter/return to finally create the profile runs the command twice which results in two new profile entries. Updating summary...
Summary: Duplicated bookmark folder creation → Using enter/return in dialogs runs the underlying command twice
Comment 4•17 years ago
|
||
Bug 401425 might be of help in understanding/fixing this bug.
![]() |
||
Updated•17 years ago
|
Flags: blocking1.9+ → blocking1.9?
![]() |
||
Comment 5•17 years ago
|
||
I didn't meant to reset the blocking flag; bad Bugzilla mid-air collision.
In the repro steps here, step 2 is incorrect - clicking add does not repro but hitting enter does.
I can't work on this more tonight, but here is a quick fix. I don't necessarily endorse this as something we should try to land, but it gets us somewhere. I'll do more tomorrow.
I should have been more clear - that patch does fix the problem for me and I didn't find any regressions in the 2 minutes of incomplete testing that I did. I just haven't taken the time to figure out if that is the right thing to do yet.
Comment 9•17 years ago
|
||
No, it's wrong. It looks like creating IME events. You should check mSentKeyPress in the if block. And if it's true, we should return.
Assignee | ||
Comment 11•17 years ago
|
||
Patch based on Masayuki Nakano comment #9, only instead of mSentKeyPress, it's mKeyPressSent.
BTW, this bug also affects the feed subscription. See (dupe) bug 420467.
Attachment #306815 -
Attachment is obsolete: true
Attachment #306854 -
Flags: review?(joshmoz)
Comment 12•17 years ago
|
||
Comment on attachment 306854 [details] [diff] [review]
v2
makes sense, we should take this for b4
Attachment #306854 -
Flags: review?(joshmoz) → review+
Updated•17 years ago
|
Attachment #306854 -
Flags: superreview?(roc)
Attachment #306854 -
Flags: review+
Assignee | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Updated•17 years ago
|
Assignee: joshmoz → dev
Status: ASSIGNED → NEW
Updated•17 years ago
|
Status: NEW → ASSIGNED
Attachment #306854 -
Flags: superreview?(roc) → superreview+
Comment 13•17 years ago
|
||
Comment on attachment 306854 [details] [diff] [review]
v2
a1.9b4=beltzner
Josh: we can take this, but does it block b4? If not, please change the TM to be "mozilla1.9"
Attachment #306854 -
Flags: approval1.9b4+
Updated•17 years ago
|
Target Milestone: mozilla1.9beta4 → mozilla1.9
Comment 14•17 years ago
|
||
Checking in widget/src/cocoa/nsChildView.mm;
/cvsroot/mozilla/widget/src/cocoa/nsChildView.mm,v <-- nsChildView.mm
new revision: 1.314; previous revision: 1.313
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.9 → mozilla1.9beta4
Comment 15•17 years ago
|
||
This should block b4, thanks for checking it in Reed.
Comment 16•17 years ago
|
||
Works fine. Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b4pre) Gecko Minefield/3.0b4pre ID:2008030308
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 17•17 years ago
|
||
Seems this bug has been fixed.
Verified with Nightly Build on Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008030304 Minefield/3.0b4pre
You need to log in
before you can comment on or make changes to this bug.
Description
•