Bug 420502 - "Using enter/return in dialogs runs the underlying command twice" [p=dev@schonfeld.org (Michael Schonfeld) r=josh r=masayuki sr=roc a1.9b4=beltzner a=blocking1.9+]